tests/purs/failing/OverlappingUnnamedInstances.out
Error found:
in module [33mMain[0m
at tests/purs/failing/OverlappingUnnamedInstances.purs:10:1 - 11:13 (line 10, column 1 - line 11, column 13)

  Overlapping type class instances found for
  [33m               [0m
  [33m  Main.Test Int[0m
  [33m               [0m
  The following instances were found:

    instance in module [33mMain[0m with type [33mforall a. Test a[0m (line 7, column 1 - line 8, column 13)
    instance in module [33mMain[0m with type [33mTest Int[0m (line 10, column 1 - line 11, column 13)


in type class instance
[33m               [0m
[33m  Main.Test Int[0m
[33m               [0m

See https://github.com/purescript/documentation/blob/master/errors/OverlappingInstances.md for more information,
or to contribute content related to this error.

